# ChatbotAI

./: .gitignore  README.MD  README.md  pyproject.toml  tailwind.config.js
backend/: pyproject.toml
backend/app/: main.py
backend/src/: app.py  my_qdrant.py  qdrant.py  rag.py
frontend/: index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  MessageForm.jsx  MessageFrom.jsx  index.css
skripsi_chatbotai/: manage.py
skripsi_chatbotai/chatbot_ai/: apps.py
skripsi_chatbotai/skripsi_chatbotai/: asgi.py  settings.py  urls.py  wsgi.py
